Added the vault retrieval subroutine

--- a/gravwell/basic_query.ipynb
+++ b/gravwell/basic_query.ipynb
@@ -2,42 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f17de136-65dd-43b1-b1d5-e755a4b9622f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter the Vault FQDN->  vault.internal.subterfuge.biz\n",
-      "Enter the Vault username->  robert.gaines\n",
-      "Enter the Vault password->  ········\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "07/07/2025 10:49:14 PM Retrieved SIEM token\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter the SIEM FQDN ->  siem.internal.subterfuge.biz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "07/07/2025 10:49:30 PM {\"Type\":\"event\",\"Metadata\":{\"UID\":1,\"Username\":\"robert.gaines\",\"Created\":\"2025-07-07T20:00:01.449030011Z\",\"AlertID\":\"63895bae-c9d8-4738-9f25-88688bc46f8a\",\"AlertName\":\"Fortigate VPN Logon\",\"AlertActivation\":\"84f1ff96-65bd-447d-8a24-a0090e39a17d\",\"EventIndex\":0,\"TargetTag\":\"_alerts\",\"AlertLabels\":[\"High\",\"Fortigate\",\"kit/io.gravwell.syslog\"],\"Dispatcher\":{\"Type\":\"scheduledsearch\",\"ID\":\"1f1a3f28-649e-4735-8f13-0d50812dc351\",\"Name\":\"Fortigate VPN Logon\",\"SearchID\":\"43460738405\",\"Labels\":[\"Firewall\",\"VPN\",\"High\",\"kit/io.gravwell.syslog\"],\"EventCount\":1,\"EventsElided\":false},\"Consumers\":[{\"Type\":\"flow\",\"ID\":\"b4add7c8-60c2-46a7-8fdd-357de14c4d96\",\"Name\":\" Fortigate VPN Logon - Flow\",\"Labels\":[\"High\",\"Fortigate\",\"kit/io.gravwell.syslog\"]}],\"UserMetadata\":{}},\"Contents\":{\"action\":\"tunnel-up\",\"group\":\"N/A\",\"logdesc\":\"IPsec connection status changed\",\"remip\":\"172.56.203.77\",\"subtype\":\"vpn\",\"time\":\"12:58:07\",\"tunneltype\":\"ipsec\",\"user\":\"172.20.10.3\"}}\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import datetime, timedelta, timezone\n",
     "import requests\n",
@@ -46,7 +14,7 @@
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath('../vault'))\n",
-    "from methods import VaultMethods\n",
+    "from vault_methods import VaultMethods\n",
     "\n",
     "urllib3.disable_warnings(urllib3.exceptions.InsecureRequestWarning)\n",
     "\n",
@@ -107,6 +75,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0dad1f71-7481-46c4-8cfd-be3df75e0361",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efb3c4dc-0b42-4cf3-a4b8-3193d36bf697",
    "metadata": {},
    "outputs": [],
    "source": []
