additional firewall methods

--- a/firewall/examine_session_table.ipynb
+++ b/firewall/examine_session_table.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cde62cd-693f-4102-b99c-701a9b69212f",
+   "id": "a55593b3-e789-4669-888f-656679dfc0fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime, timedelta, timezone\n",
+    "from fortigate_methods import FortigateMethods\n",
     "import requests\n",
     "import logging\n",
     "import urllib3\n",
@@ -22,20 +22,27 @@
     "                    datefmt='%m/%d/%Y %I:%M:%S %p',\n",
     "                    level=logging.INFO)\n",
     "\n",
-    "vault_session = VaultMethods()\n",
-    "vault_session.authenticate()\n",
-    "firewall_token = vault_session.retrieve_firewall_secret()\n",
-    "\n",
-    "if firewall_token:\n",
-    "    logging.info(\"Retrieved firewall token\")\n",
-    "else:\n",
-    "    logging.error(\"Failed to retrieve firewall token\")"
+    "if __name__ == '__main__':\n",
+    "    vault_session = VaultMethods()\n",
+    "    vault_session.authenticate()\n",
+    "    firewall_token = vault_session.retrieve_firewall_secret()\n",
+    "    logging.info(\"Retrieving token\")\n",
+    "    if firewall_token:\n",
+    "        logging.info(\"Retrieved firewall token\")\n",
+    "        addr = input(\"Firewall IP/FQDN-> \")\n",
+    "        port = int(input(\"Firewall interface port-> \"))\n",
+    "        firewall_session = FortigateMethods(addr, port, firewall_token)\n",
+    "        valid_token = firewall_session.check_token_validity()\n",
+    "        if valid_token:\n",
+    "            firewall_session.retrieve_session_table()\n",
+    "    else:\n",
+    "        logging.error(\"Failed to retrieve firewall token\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f78ae312-64ff-45d1-8860-b98f21c2860e",
+   "id": "60414c2e-fca4-41da-9a6c-9ff250180541",
    "metadata": {},
    "outputs": [],
    "source": []
