Too many items for one commit

--- a/firewall/backup_configuration.ipynb
+++ b/firewall/backup_configuration.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Using the firewall's wireless controller, retrieve data on wireless clients that are currently associated"
+    "### Backup the current firewall configuration"
    ]
   },
   {
@@ -44,7 +44,7 @@
     "        firewall_session = FortigateMethods(addr, port, firewall_token)\n",
     "        valid_token = firewall_session.check_token_validity()\n",
     "        if valid_token:\n",
-    "            firewall_session.retrieve_wireless_clients()\n",
+    "            firewall_session.backup_configuration()\n",
     "    else:\n",
     "        logging.error(\"Failed to retrieve firewall token\")"
    ]
