--- a/firewall/disassociate_host.ipynb
+++ b/firewall/disassociate_host.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a55593b3-e789-4669-888f-656679dfc0fe",
+   "id": "7e8a0cc6-5c89-4f2d-8242-1b36cfd0c5e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,13 @@
     "        firewall_session = FortigateMethods(addr, port, firewall_token)\n",
     "        valid_token = firewall_session.check_token_validity()\n",
     "        if valid_token:\n",
-    "            firewall_session.retrieve_session_table()\n",
+    "            clients = firewall_session.retrieve_wireless_clients()\n",
+    "            for client in range (0, len(clients)):\n",
+    "                logging.info(\"{0} : {1} : {2}\".format(client,clients[client]['mac'],clients[client]['ip']))\n",
+    "            selection = int(input(\"Enter the index of the target MAC address\"))\n",
+    "            selection = clients[selection]['mac']\n",
+    "            logging.info(\"Selected: {0}\".format(selection))\n",
+    "            firewall_session.disassociate_wireless_client(selection)\n",
     "    else:\n",
     "        logging.error(\"Failed to retrieve firewall token\")"
    ]
@@ -42,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60414c2e-fca4-41da-9a6c-9ff250180541",
+   "id": "fd7afc85-e059-4594-b3c8-67803827d509",
    "metadata": {},
    "outputs": [],
    "source": []
