--- a/firewall/examine_switchport_devices.ipynb
+++ b/firewall/examine_switchport_devices.ipynb
@@ -7,15 +7,552 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Using the firewall's wireless controller, retrieve data on wireless clients that are currently associated"
+    "### Using the firewall's switch controller, retrieve data on connected devices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "abc71d9e-ebcc-4168-9730-5e843c8114e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the Vault FQDN->  vault.internal.subterfuge.biz\n",
+      "Enter the Vault username->  robert.gaines\n",
+      "Enter the Vault password->  ········\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "07/21/2025 08:00:32 PM Retrieving token\n",
+      "07/21/2025 08:00:32 PM Retrieved firewall token\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Firewall IP/FQDN->  10.128.10.1\n",
+      "Firewall interface port->  8443\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "07/21/2025 08:00:38 PM Checking the firewall API token's validity\n",
+      "07/21/2025 08:00:38 PM Valid token\n",
+      "07/21/2025 08:00:38 PM Appliance status: success\n",
+      "07/21/2025 08:00:38 PM Established contact with: FG50GSTK24003234\n",
+      "07/21/2025 08:00:38 PM Requesting switchport device data\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mac</th>\n",
+       "      <th>port_name</th>\n",
+       "      <th>switch_id</th>\n",
+       "      <th>vlan_id</th>\n",
+       "      <th>port_id</th>\n",
+       "      <th>last_seen</th>\n",
+       "      <th>vdom</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00:05:1b:31:5d:3f</td>\n",
+       "      <td>port22</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22</td>\n",
+       "      <td>878</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00:50:b6:e3:24:63</td>\n",
+       "      <td>port21</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2c:cf:67:5c:78:9b</td>\n",
+       "      <td>port12</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2c:cf:67:73:ad:f3</td>\n",
+       "      <td>port11</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6c:4b:90:a2:4a:ee</td>\n",
+       "      <td>port6</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>88:ae:dd:04:e6:f5</td>\n",
+       "      <td>port1</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>88:ae:dd:0f:81:97</td>\n",
+       "      <td>port2</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>88:ae:dd:0f:81:cd</td>\n",
+       "      <td>port4</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>90:09:d0:55:d6:67</td>\n",
+       "      <td>port3</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>b8:27:eb:62:c9:03</td>\n",
+       "      <td>port10</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>b8:27:eb:bb:a6:fd</td>\n",
+       "      <td>port9</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>bc:24:11:13:10:9c</td>\n",
+       "      <td>port1</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>bc:24:11:3b:f7:e7</td>\n",
+       "      <td>port2</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>bc:24:11:3d:9d:fe</td>\n",
+       "      <td>port1</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>bc:24:11:40:f5:95</td>\n",
+       "      <td>port4</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>bc:24:11:47:78:19</td>\n",
+       "      <td>port4</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>bc:24:11:51:a5:9f</td>\n",
+       "      <td>port2</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>bc:24:11:69:47:c3</td>\n",
+       "      <td>port4</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>bc:24:11:69:cc:ca</td>\n",
+       "      <td>port4</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>bc:24:11:76:84:ff</td>\n",
+       "      <td>port1</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>bc:24:11:7a:3f:0b</td>\n",
+       "      <td>port2</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>bc:24:11:a5:75:46</td>\n",
+       "      <td>port2</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>bc:24:11:bc:a9:60</td>\n",
+       "      <td>port1</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>bc:24:11:bf:b2:91</td>\n",
+       "      <td>port4</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>bc:24:11:c1:2c:8d</td>\n",
+       "      <td>port1</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>d8:3a:dd:90:ce:3e</td>\n",
+       "      <td>port13</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>dc:a6:32:35:7d:0e</td>\n",
+       "      <td>port15</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>15</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>e4:5f:01:2d:c4:d0</td>\n",
+       "      <td>port14</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>10</td>\n",
+       "      <td>14</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>00:23:24:f2:45:e6</td>\n",
+       "      <td>port7</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>20</td>\n",
+       "      <td>7</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>90:09:d0:55:d6:68</td>\n",
+       "      <td>port5</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>30</td>\n",
+       "      <td>5</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2c:cf:67:51:be:2f</td>\n",
+       "      <td>port8</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>50</td>\n",
+       "      <td>8</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>bc:24:11:d4:6e:c0</td>\n",
+       "      <td>port2</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>50</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>e4:5f:01:36:f7:34</td>\n",
+       "      <td>port19</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>60</td>\n",
+       "      <td>19</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>e4:5f:01:56:e0:50</td>\n",
+       "      <td>port16</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>60</td>\n",
+       "      <td>16</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>e4:5f:01:56:f0:d1</td>\n",
+       "      <td>port17</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>60</td>\n",
+       "      <td>17</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>e4:5f:01:56:f2:21</td>\n",
+       "      <td>port18</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>60</td>\n",
+       "      <td>18</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>74:78:a6:03:ec:40</td>\n",
+       "      <td>port20</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>70</td>\n",
+       "      <td>20</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>94:f3:92:6f:0a:d6</td>\n",
+       "      <td>internal</td>\n",
+       "      <td>S124FNTF22014862</td>\n",
+       "      <td>4094</td>\n",
+       "      <td>0</td>\n",
+       "      <td>37</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  mac port_name         switch_id  vlan_id  port_id  \\\n",
+       "0   00:05:1b:31:5d:3f    port22  S124FNTF22014862        1       22   \n",
+       "1   00:50:b6:e3:24:63    port21  S124FNTF22014862        1       21   \n",
+       "2   2c:cf:67:5c:78:9b    port12  S124FNTF22014862       10       12   \n",
+       "3   2c:cf:67:73:ad:f3    port11  S124FNTF22014862       10       11   \n",
+       "4   6c:4b:90:a2:4a:ee     port6  S124FNTF22014862       10        6   \n",
+       "5   88:ae:dd:04:e6:f5     port1  S124FNTF22014862       10        1   \n",
+       "6   88:ae:dd:0f:81:97     port2  S124FNTF22014862       10        2   \n",
+       "7   88:ae:dd:0f:81:cd     port4  S124FNTF22014862       10        4   \n",
+       "8   90:09:d0:55:d6:67     port3  S124FNTF22014862       10        3   \n",
+       "9   b8:27:eb:62:c9:03    port10  S124FNTF22014862       10       10   \n",
+       "10  b8:27:eb:bb:a6:fd     port9  S124FNTF22014862       10        9   \n",
+       "11  bc:24:11:13:10:9c     port1  S124FNTF22014862       10        1   \n",
+       "12  bc:24:11:3b:f7:e7     port2  S124FNTF22014862       10        2   \n",
+       "13  bc:24:11:3d:9d:fe     port1  S124FNTF22014862       10        1   \n",
+       "14  bc:24:11:40:f5:95     port4  S124FNTF22014862       10        4   \n",
+       "15  bc:24:11:47:78:19     port4  S124FNTF22014862       10        4   \n",
+       "16  bc:24:11:51:a5:9f     port2  S124FNTF22014862       10        2   \n",
+       "17  bc:24:11:69:47:c3     port4  S124FNTF22014862       10        4   \n",
+       "18  bc:24:11:69:cc:ca     port4  S124FNTF22014862       10        4   \n",
+       "19  bc:24:11:76:84:ff     port1  S124FNTF22014862       10        1   \n",
+       "20  bc:24:11:7a:3f:0b     port2  S124FNTF22014862       10        2   \n",
+       "21  bc:24:11:a5:75:46     port2  S124FNTF22014862       10        2   \n",
+       "22  bc:24:11:bc:a9:60     port1  S124FNTF22014862       10        1   \n",
+       "23  bc:24:11:bf:b2:91     port4  S124FNTF22014862       10        4   \n",
+       "24  bc:24:11:c1:2c:8d     port1  S124FNTF22014862       10        1   \n",
+       "25  d8:3a:dd:90:ce:3e    port13  S124FNTF22014862       10       13   \n",
+       "26  dc:a6:32:35:7d:0e    port15  S124FNTF22014862       10       15   \n",
+       "27  e4:5f:01:2d:c4:d0    port14  S124FNTF22014862       10       14   \n",
+       "28  00:23:24:f2:45:e6     port7  S124FNTF22014862       20        7   \n",
+       "29  90:09:d0:55:d6:68     port5  S124FNTF22014862       30        5   \n",
+       "30  2c:cf:67:51:be:2f     port8  S124FNTF22014862       50        8   \n",
+       "31  bc:24:11:d4:6e:c0     port2  S124FNTF22014862       50        2   \n",
+       "32  e4:5f:01:36:f7:34    port19  S124FNTF22014862       60       19   \n",
+       "33  e4:5f:01:56:e0:50    port16  S124FNTF22014862       60       16   \n",
+       "34  e4:5f:01:56:f0:d1    port17  S124FNTF22014862       60       17   \n",
+       "35  e4:5f:01:56:f2:21    port18  S124FNTF22014862       60       18   \n",
+       "36  74:78:a6:03:ec:40    port20  S124FNTF22014862       70       20   \n",
+       "37  94:f3:92:6f:0a:d6  internal  S124FNTF22014862     4094        0   \n",
+       "\n",
+       "    last_seen  vdom  \n",
+       "0         878  root  \n",
+       "1        2500  root  \n",
+       "2          37  root  \n",
+       "3          37  root  \n",
+       "4          37  root  \n",
+       "5          37  root  \n",
+       "6          37  root  \n",
+       "7          37  root  \n",
+       "8          37  root  \n",
+       "9          37  root  \n",
+       "10         37  root  \n",
+       "11         37  root  \n",
+       "12         37  root  \n",
+       "13         37  root  \n",
+       "14         37  root  \n",
+       "15         37  root  \n",
+       "16         37  root  \n",
+       "17         37  root  \n",
+       "18         37  root  \n",
+       "19         37  root  \n",
+       "20         37  root  \n",
+       "21         37  root  \n",
+       "22         37  root  \n",
+       "23         37  root  \n",
+       "24         37  root  \n",
+       "25         37  root  \n",
+       "26         37  root  \n",
+       "27         37  root  \n",
+       "28         37  root  \n",
+       "29         37  root  \n",
+       "30         37  root  \n",
+       "31         37  root  \n",
+       "32         37  root  \n",
+       "33         37  root  \n",
+       "34         37  root  \n",
+       "35         37  root  \n",
+       "36         37  root  \n",
+       "37         37  root  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from fortigate_methods import FortigateMethods\n",
     "import requests\n",
