--- a/fleetdm/get_host_count.ipynb
+++ b/fleetdm/get_host_count.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a55593b3-e789-4669-888f-656679dfc0fe",
+   "id": "14f0541a-d38e-48ad-9534-975815406950",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fortigate_methods import FortigateMethods\n",
+    "from fleetdm_methods import FleetDMMethods\n",
     "import requests\n",
     "import logging\n",
     "import urllib3\n",
@@ -25,24 +25,19 @@
     "if __name__ == '__main__':\n",
     "    vault_session = VaultMethods()\n",
     "    vault_session.authenticate()\n",
-    "    firewall_token = vault_session.retrieve_firewall_secret()\n",
+    "    fleetdm_token = vault_session.retrieve_fleetdm_secret()\n",
     "    logging.info(\"Retrieving token\")\n",
-    "    if firewall_token:\n",
-    "        logging.info(\"Retrieved firewall token\")\n",
-    "        addr = input(\"Firewall IP/FQDN-> \")\n",
-    "        port = int(input(\"Firewall interface port-> \"))\n",
-    "        firewall_session = FortigateMethods(addr, port, firewall_token)\n",
-    "        valid_token = firewall_session.check_token_validity()\n",
-    "        if valid_token:\n",
-    "            firewall_session.retrieve_session_table()\n",
-    "    else:\n",
-    "        logging.error(\"Failed to retrieve firewall token\")"
+    "    if fleetdm_token:\n",
+    "        fqdn = input(\"Enter the FleetDM FQDN-> \")\n",
+    "        port = int(input(\"Enter the FleetDM API Port-> \"))\n",
+    "        session = FleetDMMethods(fqdn, port, fleetdm_token)\n",
+    "        session._get_host_count()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60414c2e-fca4-41da-9a6c-9ff250180541",
+   "id": "8795617d-850d-4f46-bb2f-e289efea763a",
    "metadata": {},
    "outputs": [],
    "source": []
