--- a/iris/close_open_cases.ipynb
+++ b/iris/close_open_cases.ipynb
@@ -3,11 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a55593b3-e789-4669-888f-656679dfc0fe",
+   "id": "acdbca1d-dfd3-48c3-9891-ce4afa671bcc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fortigate_methods import FortigateMethods\n",
+    "from datetime import datetime, timedelta, timezone\n",
+    "from iris_methods import IrisMethods\n",
     "import requests\n",
     "import logging\n",
     "import urllib3\n",
@@ -25,16 +26,13 @@
     "if __name__ == '__main__':\n",
     "    vault_session = VaultMethods()\n",
     "    vault_session.authenticate()\n",
-    "    firewall_token = vault_session.retrieve_firewall_secret()\n",
+    "    iris_token = vault_session.retrieve_iris_secret()\n",
     "    logging.info(\"Retrieving token\")\n",
-    "    if firewall_token:\n",
-    "        logging.info(\"Retrieved firewall token\")\n",
-    "        addr = input(\"Firewall IP/FQDN-> \")\n",
-    "        port = int(input(\"Firewall interface port-> \"))\n",
-    "        firewall_session = FortigateMethods(addr, port, firewall_token)\n",
-    "        valid_token = firewall_session.check_token_validity()\n",
-    "        if valid_token:\n",
-    "            firewall_session.retrieve_session_table()\n",
+    "    if iris_token:\n",
+    "        fqdn = input(\"Enter the IRIS FQDN -> \")\n",
+    "        i = IrisMethods(fqdn, iris_token)\n",
+    "        i.retrieve_open_cases()\n",
+    "        i.close_open_cases()\n",
     "    else:\n",
     "        logging.error(\"Failed to retrieve firewall token\")"
    ]
@@ -42,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60414c2e-fca4-41da-9a6c-9ff250180541",
+   "id": "65b2e53e-0fec-472c-b069-dbe0d1869708",
    "metadata": {},
    "outputs": [],
    "source": []
