--- a/misp/test.ipynb
+++ b/misp/test.ipynb
@@ -2,12 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a55593b3-e789-4669-888f-656679dfc0fe",
+   "execution_count": 1,
+   "id": "e855654c-a704-4cfc-b656-3e6445968ba0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the Vault FQDN->  vault.internal.subterfuge.biz\n",
+      "Enter the Vault username->  robert.gaines\n",
+      "Enter the Vault password->  ········\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "07/16/2025 03:58:13 AM Retrieving token\n",
+      "07/16/2025 03:58:13 AM Retrieved MISP token\n"
+     ]
+    }
+   ],
    "source": [
-    "from fortigate_methods import FortigateMethods\n",
     "import requests\n",
     "import logging\n",
     "import urllib3\n",
@@ -25,24 +42,18 @@
     "if __name__ == '__main__':\n",
     "    vault_session = VaultMethods()\n",
     "    vault_session.authenticate()\n",
-    "    firewall_token = vault_session.retrieve_firewall_secret()\n",
+    "    misp_token = vault_session.retrieve_misp_secret()\n",
     "    logging.info(\"Retrieving token\")\n",
-    "    if firewall_token:\n",
-    "        logging.info(\"Retrieved firewall token\")\n",
-    "        addr = input(\"Firewall IP/FQDN-> \")\n",
-    "        port = int(input(\"Firewall interface port-> \"))\n",
-    "        firewall_session = FortigateMethods(addr, port, firewall_token)\n",
-    "        valid_token = firewall_session.check_token_validity()\n",
-    "        if valid_token:\n",
-    "            firewall_session.retrieve_session_table()\n",
+    "    if misp_token:\n",
+    "        logging.info(\"Retrieved MISP token\")\n",
     "    else:\n",
-    "        logging.error(\"Failed to retrieve firewall token\")"
+    "        logging.error(\"Failed to retrieve MISP token\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60414c2e-fca4-41da-9a6c-9ff250180541",
+   "id": "8ec59f92-88cf-4190-a4d6-6b9b59b2d1f9",
    "metadata": {},
    "outputs": [],
    "source": []
