--- a/nessus/test.ipynb
+++ b/nessus/test.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a55593b3-e789-4669-888f-656679dfc0fe",
+   "id": "5129dd55-d1a6-48e1-bd04-6d35720ca438",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fortigate_methods import FortigateMethods\n",
+    "#from fleetdm_methods import FleetDMMethods\n",
     "import requests\n",
     "import logging\n",
     "import urllib3\n",
@@ -25,24 +25,16 @@
     "if __name__ == '__main__':\n",
     "    vault_session = VaultMethods()\n",
     "    vault_session.authenticate()\n",
-    "    firewall_token = vault_session.retrieve_firewall_secret()\n",
+    "    nessus_secrets = vault_session.retrieve_nessus_secrets()\n",
     "    logging.info(\"Retrieving token\")\n",
-    "    if firewall_token:\n",
-    "        logging.info(\"Retrieved firewall token\")\n",
-    "        addr = input(\"Firewall IP/FQDN-> \")\n",
-    "        port = int(input(\"Firewall interface port-> \"))\n",
-    "        firewall_session = FortigateMethods(addr, port, firewall_token)\n",
-    "        valid_token = firewall_session.check_token_validity()\n",
-    "        if valid_token:\n",
-    "            firewall_session.retrieve_session_table()\n",
-    "    else:\n",
-    "        logging.error(\"Failed to retrieve firewall token\")"
+    "    if nessus_secrets:\n",
+    "        logging.info(nessus_secrets)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60414c2e-fca4-41da-9a6c-9ff250180541",
+   "id": "aafd2bc4-3ee0-47ce-a1ae-6009c4c5e452",
    "metadata": {},
    "outputs": [],
    "source": []
