Fleet Vulns, basic Nessus and Elastic scripts

--- a/fleetdm/get_hosts.ipynb
+++ b/fleetdm/get_hosts.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5129dd55-d1a6-48e1-bd04-6d35720ca438",
+   "id": "f8ef6e1f-e488-438d-a808-513748c34cff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from fleetdm_methods import FleetDMMethods\n",
+    "from fleetdm_methods import FleetDMMethods\n",
     "import requests\n",
     "import logging\n",
     "import urllib3\n",
@@ -25,16 +25,19 @@
     "if __name__ == '__main__':\n",
     "    vault_session = VaultMethods()\n",
     "    vault_session.authenticate()\n",
-    "    nessus_secrets = vault_session.retrieve_nessus_secrets()\n",
+    "    fleetdm_token = vault_session.retrieve_fleetdm_secret()\n",
     "    logging.info(\"Retrieving token\")\n",
-    "    if nessus_secrets:\n",
-    "        logging.info(nessus_secrets)\n"
+    "    if fleetdm_token:\n",
+    "        fqdn = input(\"Enter the FleetDM FQDN-> \")\n",
+    "        port = int(input(\"Enter the FleetDM API Port-> \"))\n",
+    "        session = FleetDMMethods(fqdn, port, fleetdm_token)\n",
+    "        session._get_hosts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aafd2bc4-3ee0-47ce-a1ae-6009c4c5e452",
+   "id": "2f8dfb8a-8362-4f90-950e-b1e3e26c4112",
    "metadata": {},
    "outputs": [],
    "source": []
